# Internet-feeds

./: Makefile  README.md  dataanalyzer.py  dbfeeds.py  feeds.db  pyproject.toml  search.html
scripts/: config.js  dbworker.js
