[tool.poetry]
name = "Internet-feeds"
version = "0.0.7"
description = ""
authors = ["X Y Z <rozbujnik@gmail.com>"]
readme = "README.md"
packages = [{include = "static_lists"}]

[tool.poetry.dependencies]
python = "^3.10"
linkarchivetools="^0.0.45"
webtoolkitex="^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
